Tue Feb  3 22:36:25 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/2.0.rb, lib/rss/content.rb, lib/rss/dublincore.rb,
	  lib/rss/rss.rb, lib/rss/syndication.rb: removed warnings.

	* lib/rss/converter.rb: removed handling load error of nkf.

	* test/rss/test_syndication.rb, test/rss/test_trackback.rb,
	  test/rss/test_dublincore.rb, test/rss/test_content.rb: replaced
	  'require "rss/parser"' by 'require "rss/1.0"'.

	* test/rss/test_parser.rb, test/rss/test_accessor.rb: removed
	  'require "rss/parser"'.

Tue Feb  3 11:23:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reduce_nodes): remove tail returns.  [ruby-talk:90934]

Tue Feb  3 08:04:57 2004  Tanaka Akira  <akr@m17n.org>

	* lib/pp.rb (Struct#pretty_print_cycle): follow 1.8 style.

Mon Feb  2 22:06:31 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (block_append, new_evstr, void_expr0): remove no longer used
	  labels.

Mon Feb  2 18:45:50 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* dln.c (dln_load): don't specify RTLD_GLOBAL on Interix,
	  because it caused SEGV when running runner.rb.

Mon Feb  2 01:54:00 2004  Tanaka Akira  <akr@m17n.org>

	* lib/pp.rb (Struct#pretty_print): make it 1.8 style.
	  (Numeric#pretty_print, FalseClass#pretty_print)
	  (TrueClass#pretty_print, Module#pretty_print): fix pp for objects
	  with instance variables.  [ruby-talk:91157]

	* lib/open-uri.rb (URI::Generic#find_proxy): return nil on loopback
	  address.

	* lib/resolv-replace.rb (BasicSocket#send): don't replace because
	  it has no hostname argument.
	  (IPSocket.getaddress): raise SocketError instead of
	  Resolv::ResolvError for errors.
	  (TCPSocket#initialize, UDPSocket#bind, UDPSocket#connect)
	  (SOCKSSocket#initialize): use IPSocket.getaddress instead of
	  Resolv.getaddress.
	  (UDPSocket#send): recognize 3 arguments form.  try all addresses on
	  4 arguments form.

Sun Feb  1 23:00:00 2004  Shigeo Kobayashi <shigek@ruby-lang.org>
